# FineR

./: .gitignore  README.md  batch_launcher.sh  batch_launcher_IdentifyAndHowto.sh  batch_launcher_IdentifyAndHowto_random.sh  batch_launcher_eval.sh  batch_launcher_eval_random.sh  batch_launcher_fullpipe.sh  batch_launcher_fullpipe_random.sh  discovering.py  grouping.py  pyproject.toml
agents/: llm_bot.py  vlm_bot.py  vqa_bot.py
configs/: env_machine.yml
configs/expts/: bird200_all.yml  car196_all.yml  dog120_all.yml  flower102_all.yml  pet37_all.yml  pokemon_all.yml
configs/expts_L14/: bird200_all.yml  car196_all.yml  dog120_all.yml  flower102_all.yml  pet37_all.yml  pokemon_all.yml
data/: __init__.py  bird200.py  build_data.py  car196.py  data_stats.py  data_utils.py  dog120.py  flower102.py  pet37.py  plot_longtail_disco_set.py  pokemon.py  prompt_identify.py  utils.py
datasets/: link_local_sets.sh
experiments/bird200/describe/: bird_attributes_pairs_1.json  bird_attributes_pairs_10.json  bird_attributes_pairs_2.json  (+18 more)
scripts_IdentifyAndHowto/: b_pipe.sh  c_pipe.sh  d_pipe.sh  f_pipe.sh  p_pipe.sh  poke_pipe.sh
scripts_IdentifyAndHowto_random/: b_pipe.sh  c_pipe.sh  d_pipe.sh  f_pipe.sh  p_pipe.sh  poke_pipe.sh
scripts_eval/: b_pipe.sh  c_pipe.sh  d_pipe.sh  f_pipe.sh  p_pipe.sh  poke_pipe.sh
scripts_eval_random/: b_pipe.sh  c_pipe.sh  d_pipe.sh  f_pipe.sh  p_pipe.sh
scripts_full_pipeline/: b_pipe.sh  c_pipe.sh  d_pipe.sh  f_pipe.sh  p_pipe.sh  poke_pipe.sh
scripts_full_pipeline_random/: b_pipe.sh  c_pipe.sh  d_pipe.sh  f_pipe.sh  p_pipe.sh
utils/: configuration.py  metrics.py  semantic_similarity.py  util.py
(+248 files in other folders)
